# tptp-to-json

./: Main.hs  README.md  tptp-to-json.cabal
